fixed major layout issue across the website

--- a/Assignment/Assessment.css
+++ b/Assignment/Assessment.css
@@ -10,7 +10,7 @@ body{
 background-color: lightblue;
 display: grid;
 grid-template-columns: 100%;
-grid-template-rows: 10% 0% 12% 10%;
+grid-template-rows: 4em 3em 0em 2em;
 grid-template-areas: 
 "header" 
 "nav"
@@ -107,7 +107,7 @@ form {
     align-items: center;
     grid-gap: 0.5em;
     margin: auto;
-    
+
 
 }
 
